# fms-hf-tuning

./: .gitignore  .prettierignore  .pylintrc  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  clearml.conf  code-of-conduct.md  flashattn_requirements.txt  orchestrator_log_format.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_requirements.txt  torch_requirements.txt  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  user_story.md
.github/workflows/: build-and-publish.yaml  coverage.yaml  dev-image.yaml  format.yml  image.yaml  kind-e2e.yaml  labelpr.yaml  pr-command.yaml  release-image.yaml  staging-image.yaml  test.yaml
accelerate/: setup.py
accelerate/examples/: complete_cv_example.py  complete_nlp_example.py  cv_example.py  multigpu_remote_launcher.py  nlp_example.py
accelerate/tests/: test_accelerator.py  test_big_modeling.py  test_cli.py  test_cpu.py  test_data_loader.py  test_examples.py  test_fp8.py  test_grad_sync.py  test_hooks.py  test_kwargs_handlers.py  test_load_checkpoint_and_dispatch_with_broadcast.py  test_logging.py  test_memory_utils.py  test_metrics.py  test_modeling_utils.py  test_multigpu.py  test_offload.py  test_optimizer.py  test_quantization.py  test_sagemaker.py  test_scheduler.py  test_state_checkpointing.py  test_tpu.py  test_tracking.py  test_utils.py  xla_spawn.py
accelerate/utils/: log_reports.py  stale.py
architecture_records/: 001-trainer-controller-framework.md  002-acceleration-framework.md  003-generic-tracker-framework.md  004-dataloader-v2.md  004-datapreprocessor.md  00x-model-merging-&-mixing.md  template.md
config/: accelerate_fsdp_llama_2_procs.yaml
dev/: README.md  nvcr.Dockerfile
docs/: advanced-data-handlers.md  advanced-data-preprocessing.md  data-config-selection.md  ept.md  experiment-tracking.md  installation.md  installations.md  offline-data-preprocessing.md  supported-models.md  training.md  tuning-techniques.md  vision-language-model-tuning.md
examples/: kfto-kueue-sft-trainer.yaml
examples/fsdp_config/: config.json
examples/predefined_configs/: tokenize_and_instruction_masking.yaml
fixtures/: accelerate_fsdp_defaults.yaml  accelerated-peft-autogptq-sample-configuration.yaml  acceleration_framework.yaml  orchestrator_log_format.yaml
fms-acceleration/: .gitignore  README.md  setup_requirements.txt  tox.ini
fms-acceleration/plugins/activation-checkpointing/: README.md  pyproject.toml
fms-acceleration/plugins/activation-checkpointing/src/fms_acceleration_ac/: __init__.py  framework_plugin_ac.py
fms-acceleration/plugins/activation-checkpointing/src/fms_acceleration_ac/utils/: __init__.py  utils.py
fms-acceleration/plugins/attention-and-distributed-packing/: .pylintrc  README.md  pyproject.toml
fms-acceleration/plugins/attention-and-distributed-packing/configs/: multipack.yaml  padding_free.yaml
fms-acceleration/plugins/attention-and-distributed-packing/src/fms_acceleration_aadp/: __init__.py  aadp_utils.py
fms-acceleration/plugins/attention-and-distributed-packing/tests/: test_aadp_plugin.py
fms-acceleration/plugins/framework/: pyproject.toml
fms-acceleration/plugins/framework/src/fms_acceleration/: __init__.py  constants.py  framework.py
fms-acceleration/plugins/framework/src/fms_acceleration/utils/: __init__.py  test_utils.py
fms-acceleration/plugins/framework/tests/: model_patcher_test_utils.py  test_accel_patcher.py  test_framework.py  test_model_patcher.py  test_model_patcher_helpers.py
fms-acceleration/plugins/framework/tests/model_patcher_fixtures/module1/: __init__.py
fms-acceleration/plugins/framework/tests/model_patcher_fixtures/module4/: __init__.py
fms-acceleration/plugins/framework/tests/model_patcher_fixtures/module4/module5/: module5_1.py
fms-acceleration2/: CODEOWNERS
fms-acceleration2/plugins/accelerated-moe/: pyproject.toml
fms-acceleration2/plugins/accelerated-moe/src/fms_acceleration_moe/: __init__.py
fms-acceleration2/plugins/accelerated-moe/src/fms_acceleration_moe/utils/: __init__.py  scattermoe.py  scattermoe_constants.py
fms-acceleration2/plugins/accelerated-moe/src/fms_acceleration_moe/utils/scattermoe_utils/khd/kernels/ops/: compileable_ops.py
fms-acceleration2/plugins/accelerated-moe/src/fms_acceleration_moe/utils/scattermoe_utils/megablocks/kernels/: gather_scatter.py
fms-acceleration2/plugins/accelerated-moe/tests/: test_scattermoe_plugin.py
fms-acceleration2/plugins/fused-ops-and-kernels/: pyproject.toml  tox.ini
fms-acceleration2/plugins/fused-ops-and-kernels/src/fms_acceleration_foak/: __init__.py  framework_plugin_fast_kernels.py  utils.py
fms-acceleration2/plugins/fused-ops-and-kernels/src/fms_acceleration_foak/fused_ops/unsloth_lora/gptq/: fast_lora.py
fms-acceleration2/plugins/fused-ops-and-kernels/src/fms_acceleration_foak/fused_ops/unsloth_lora/gptq/triton/: kernels.py
fms-acceleration2/plugins/fused-ops-and-kernels/src/fms_acceleration_foak/kernels/unsloth/: utils.py
fms-acceleration2/plugins/fused-ops-and-kernels/src/fms_acceleration_foak/models/: granitemoe.py  granitemoehybrid.py  llama.py  mixtral.py  utils.py
fms-acceleration2/plugins/fused-ops-and-kernels/tests/: test_fused_ops.py  test_model_utils.py
launcher/: accelerate_launch.py
mixing/: mix.py
open-instruct/: .gitignore  pyproject.toml  xuan.patch
scripts/: alpaca_to_sft_format.py  checkpoint_utils.py  cluster_k8s.yaml  cluster_stuff.md  convert_fp32_to_bf16.py  convert_to_hf_checkpoint.py  deploy_test.md  dry_run_data_processor.py  evaluation.md  kind-e2e.sh  offline_data_processing.py  post_process_adapters_vLLM.py  pull_and_format_datasets.py  run_deploy_test.py  run_evaluation.py  run_inference.py
tests/: dummy_job_config.json  helpers.py  test_data_formatting.py  test_launch_script.py  test_sft_trainer.py
trainer_image/: launch_training.py
transformers/: conftest.py  hubconf.py  setup.py
tuning/: aim_loader.py  callbacks.py  fms-recommender.py  load_and_run.py  run_inference.py  sft_trainer.py  tcprocessors.py  trainer.py  tuned_model.py
(+4453 files in other folders)
