[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
    ]

[project]
name = "fms-hf-tuning"
dynamic = ["version"]
description = "FMS HF Tuning"
authors = [
  {name = "Sukriti Sharma", email = "sukriti.sharma4@ibm.com"},
  {name = "Anh Uong", email = "anh.uong@ibm.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "~=3.9"
keywords = ['fms-hf-tuning', 'python', 'tuning']
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
"numpy",
"accelerate>=0.20.3",
"transformers",
"torch",
"sentencepiece",
"tokenizers>=0.13.3",
"tqdm",
"trl==0.8.6",
"peft>=0.8.0",
"datasets>=2.15.0",
"fire",
"simpleeval",
]

[project.optional-dependencies]
dev = ["wheel", "packaging", "ninja", "scikit-learn>=1.0, <2.0", "boto3"]
flash-attn = ["flash-attn"]
aim = ["aim==3.19.0"]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
namespaces = false

[tool.setuptools_scm]
version_file = "tuning/_version.py"

[project.urls]
Homepage = "https://github.com/foundation-model-stack/fms-hf-tuning"
Repository = "https://github.com/foundation-model-stack/fms-hf-tuning"
Issues = "https://github.com/foundation-model-stack/fms-hf-tuning/issues"
