[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.files."tuning/_version.py"]
persistent-substitution = true
initial-content = """
  # These version placeholders will be replaced later during substitution.
  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""

[tool.poetry]
# poetry-dynamic-versioning will auto-generate this when running commands like `poetry build`
version = "0.0.0"

name = "fms-hf-tuning"
description = "FMS HF Tuning"
authors = ["Sukriti Sharma <sukriti.sharma4@ibm.com>", "Anh Uong <anh.uong@ibm.com>"]
readme = "README.md"

exclude = ["tests", "venv"]
license = "Apache-2.0"
keywords = ['fms-hf-tuning', 'python', 'tuning']

classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

packages= [{include="tuning"}]

[tool.poetry.extras]
flash-attn=["flash-attn"]
aim=["aim"]
fms-accel = ["fms_acceleration"]
dev=["wheel", "packaging", "ninja", "scikit-learn", "boto3", "pytest", "setuptools", "pre-commit", "pylint", "coverage", "genbadge"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = ">=1.26.4,<2.0"
accelerate = ">=0.20.3,<0.40"
transformers = ">=4.34.1,<=4.40.2,!=4.38.2"
torch = ">=2.2.0,<3.0"
sentencepiece = ">=0.1.99,<0.3"
tokenizers = ">=0.13.3,<1.0"
tqdm = ">=4.66.2,<5.0"
trl = ">=0.9.3,<1.0"
peft = ">=0.8.0,<0.13"
datasets = ">=2.15.0,<3.0"
fire = ">=0.5.0,<1.0"
simpleeval = ">=0.9.13,<1.0"

# Dependencies for extras
# For the "dev" extras
wheel = { version = ">=0.42.0,<1.0", optional = true }
packaging = { version = ">=23.2,<24", optional = true }
ninja = { version = ">=1.11.1.1,<2.0", optional = true }
scikit-learn = { version = ">=1.0,<2.0", optional = true }
boto3 = { version = ">=1.34,<2.0", optional = true }
pytest = { version = ">=7.0.0", optional = true }
setuptools = { version = "^70.1.0", optional = true }
pre-commit = { version = "^3.0.0", optional = true }
pylint = { version = ">=2.16.2,<=3.1.0", optional = true }
coverage = { version = "^7.5.4", optional = true }
genbadge = { version = "^1.1.1", extras = ["coverage"], optional = true}

# For the "flash-attn" extras
flash-attn = {version = ">=2.5.3,<3.0", optional = true}

# For the "aim" extras
aim  = { version = ">=3.19.0,<4.0",  optional = true}

# For the "fms-accel" extras
fms_acceleration = {git = "https://github.com/foundation-model-stack/fms-acceleration.git", subdirectory="plugins/framework", optional = true}


[project.urls]
Homepage = "https://github.com/foundation-model-stack/fms-hf-tuning"
Repository = "https://github.com/foundation-model-stack/fms-hf-tuning"
Issues = "https://github.com/foundation-model-stack/fms-hf-tuning/issues"
